# StackOverFlowAutomation

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
src/super_tester/: app.py
src/super_tester/pages/: questions_page.py  search_tags_page.py  single_question_page.py  tag_page.py
tests/: test_tags_page.py
