[project]
name = "super-tester"
version = "0.1.0"
description = ""
authors = [
    {name = "Iram Lopez",email = "iram644@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium (>=4.41.0,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "super_tester", from = "src"}]

[tool.poetry.scripts]
super_tester = "super_tester.app:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "black (>=26.3.0,<27.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
